--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <!-- inject:css -->
     <link rel="stylesheet" href="~/assets/css/style.css">
@@ -218,7 +221,7 @@
                             <div class="collapse" id="manageAccountMenu">
                                 <ul class="nav flex-column sub-menu">
                                     <li class="nav-item">
-                                        <a class="nav-link" asp-controller="Admin" asp-action="List">
+                                        <a class="nav-link" asp-controller="Account" asp-action="List">
                                             Danh sách tài khoản
                                         </a>
                                     </li>
@@ -226,7 +229,7 @@
 
 
                                     <li class="nav-item">
-                                        <a class="nav-link" asp-controller="Role" asp-action="Index">Phân quyền</a>
+                                        <a class="nav-link" asp-controller="Admin" asp-action="ListRestore">Thùng rác</a>
                                     </li>
                                 </ul>
                             </div>
@@ -276,17 +279,17 @@
                             </div>
                         </li>
 
-                        <!-- QUẢN LÝ MÔN HỌC -->
+                        <!-- QUẢN LÝ Lớp HỌC -->
                         <li class="nav-item">
-                            <a class="nav-link" data-bs-toggle="collapse" href="#manageSubjectMenu" aria-expanded="false">
+                            <a class="nav-link" data-bs-toggle="collapse" href="#manageClassMenu" aria-expanded="false">
                                 <i class="menu-icon mdi mdi-book-open-page-variant"></i>
-                                <span class="menu-title">Quản lý Môn học</span>
+                                <span class="menu-title">Quản lý lớp học</span>
                                 <i class="menu-arrow"></i>
                             </a>
-                            <div class="collapse" id="manageSubjectMenu">
+                            <div class="collapse" id="manageClassMenu">
                                 <ul class="nav flex-column sub-menu">
                                     <li class="nav-item">
-                                        <a class="nav-link" asp-controller="Subject" asp-action="Index">Danh sách môn học</a>
+                                        <a class="nav-link" asp-controller="Class" asp-action="Index">Danh sách lớp học</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" asp-controller="Subject" asp-action="Create">Thêm môn học</a>
@@ -410,9 +413,10 @@
                 link.setAttribute("aria-expanded", "false");
             });
 
-            // Optional: ngăn template.js tự mở menu dựa trên link active
-            // Nếu template có code tự mở dựa trên active, đoạn trên sẽ ghi đè lại
+        
         });
+
+    
     </script>
 
     @await RenderSectionAsync("Scripts", required: false)
