--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -1,7 +1,11 @@
 ﻿@using System.Security.Claims
 @{
-    var role = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Role)?.Value ?? "Student";
-    var username = User.Identity?.Name ?? "User";
+   
+
+    var role = User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value;
+    var username = User.FindFirst(System.Security.Claims.ClaimTypes.Name)?.Value;
+
+
 }
 
 <!DOCTYPE html>
@@ -38,10 +42,13 @@
     <link rel="stylesheet" href="~/assets/css/style.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="~/assets/images/favicon.ico" />
+    <link rel="stylesheet" href="~/css/toast.css" asp-append-version="true" />
 
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body class="with-welcome-text">
+    <div id="toast-container"></div>
+
     <div class="container-scroller">
         <!-- Top Banner -->
         <div class="row p-0 m-0 proBanner" id="proBanner">
@@ -83,44 +90,28 @@
             <div class="navbar-menu-wrapper d-flex align-items-top">
                 <ul class="navbar-nav">
                     <li class="nav-item fw-semibold d-none d-lg-block ms-0">
-                        <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">@(ViewData["UserName"] ?? "User")</span></h1>
+                        <h1 class="welcome-text">
+                            Good Morning, <span class="text-black fw-bold">@username</span>
+                        </h1>
+
                         <h3 class="welcome-sub-text">Your performance summary this week</h3>
                     </li>
                 </ul>
                
                 <ul class="navbar-nav ms-auto">
                     <!-- Category Dropdown -->
-                    <li class="nav-item dropdown d-none d-lg-block">
-                        <a class="nav-link dropdown-bordered dropdown-toggle dropdown-toggle-split" id="messageDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">Select Category</a>
-                        <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="messageDropdown">
-                            <a class="dropdown-item py-3">
-                                <p class="mb-0 fw-medium float-start">Select category</p>
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item preview-item">
-                                <div class="preview-item-content flex-grow py-2">
-                                    <p class="preview-subject ellipsis fw-medium text-dark">Bootstrap Bundle</p>
-                                    <p class="fw-light small-text mb-0">This is a Bundle featuring 16 unique dashboards</p>
-                                </div>
-                            </a>
-                            <a class="dropdown-item preview-item">
-                                <div class="preview-item-content flex-grow py-2">
-                                    <p class="preview-subject ellipsis fw-medium text-dark">Angular Bundle</p>
-                                    <p class="fw-light small-text mb-0">Everything you'll ever need for your Angular projects</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
+                   
 
                     <!-- Date Picker -->
                     <li class="nav-item d-none d-lg-block">
-                        <div id="datepicker-popup" class="input-group date datepicker navbar-date-picker">
+                        <div id="datepicker-popup" class="input-group date  ">
                             <span class="input-group-addon input-group-prepend border-right">
                                 <span class="icon-calendar input-group-text calendar-icon"></span>
                             </span>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" value="@DateTime.Now.ToString("ddd, dd/MM/yyyy HH:mm")">
                         </div>
                     </li>
+
 
                     <!-- Search -->
                     <li class="nav-item">
@@ -334,13 +325,7 @@
                             </a>
                             <div class="collapse" id="tables">
                                 <ul class="nav flex-column sub-menu">
-                                    <li class="nav-item"><a class="nav-link" asp-controller="Doctor" asp-action="Index">Doctor</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-controller="MedicalRecords" asp-action="Index">MedicalRecord</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-controller="Test" asp-action="Index">TestPage</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-controller="TestResult" asp-action="Index">TestResult</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-controller="Medicine" asp-action="Index">Medicine</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-controller="Patient" asp-action="List">Patient</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-controller="Prescription" asp-action="List">Prescription</a></li>
+                                    <li class="nav-item"><a class="nav-link" asp-controller="Teacher" asp-action="Classes">Quản lý lớp học</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -349,12 +334,22 @@
                     @if (role == "Student")
                     {
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Student" asp-action="MyTests">
+                            <a class="nav-link" data-bs-toggle="collapse" href="#studentMenu" aria-expanded="false">
                                 <i class="mdi mdi-book-open-page-variant menu-icon"></i>
                                 <span class="menu-title">My Tests</span>
+                                <i class="menu-arrow"></i>
                             </a>
+                            <div class="collapse" id="studentMenu">
+                                <ul class="nav flex-column sub-menu">
+                                    <li class="nav-item"><a class="nav-link" asp-controller="Student" asp-action="Index">Danh sách lớp theo học</a></li>
+                                    <li class="nav-item"><a class="nav-link" asp-controller="Student" asp-action="StudentGrade">Kết quả</a></li>
+                                    <li class="nav-item"><a class="nav-link" asp-controller="Student" asp-action="StudentSchedule">Lịch học</a></li>
+                                    <!-- Bạn có thể thêm sub-menu khác tại đây -->
+                                </ul>
+                            </div>
                         </li>
                     }
+
 
                 </ul>
 
