--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Teacher/Students.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Teacher/Students.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Text.Json
-@model IEnumerable<BusinessLogicLayer.DTOs.Teacher.StudentDto>
+@model IEnumerable<BusinessLogicLayer.DTOs.ManagerTeacher.StudentDto>
 
 @{
     ViewData["Title"] = "Danh sách học sinh";
