--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Teacher/_EnterGradeModal.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Teacher/_EnterGradeModal.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusinessLogicLayer.DTOs.Teacher.EnterGradeViewModel
+﻿@model BusinessLogicLayer.DTOs.ManagerTeacher.EnterGradeViewModel
 
 <div class="modal fade" id="scoreModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
