--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Admin/ListRestore.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Admin/ListRestore.cshtml
@@ -140,7 +140,7 @@
                                         <td>
                                             <div class="btn-group" role="group">
                                                 <div class="btn-group" role="group">
-                                                    <a asp-action="Edit" asp-controller="Admin" asp-route-id="@user.UserId"
+                                                    <a asp-action="EditTrash" asp-controller="Admin" asp-route-id="@user.UserId"
                                                        class="btn btn-outline-success btn-sm">
                                                         <i class="mdi mdi-backup-restore"></i> Khôi phục
                                                     </a>
