--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Auth/Login.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Auth/Login.cshtml
@@ -52,9 +52,9 @@
                                     <button type="submit" class="btn btn-primary btn-lg fw-medium auth-form-btn">Đăng nhập</button>
                                 </div>
 
-                                <div class="text-center mt-4 fw-light">
+                                @* <div class="text-center mt-4 fw-light">
                                     Chưa có tài khoản? <a href="/Auth/Register" class="text-primary">Đăng ký</a>
-                                </div>
+                                </div> *@
                             </form>
                         </div>
                     </div>
